# cg2021_2022

./: .gitignore
Projeto/: .gitignore  CMakeLists.txt  Doxyfile  readme.md
Projeto/Fase1/: xml_syntax.xml
Projeto/Fase1/code/: main.cpp
Projeto/docs/: annotated.html  annotated_dup.js  classes.html  curves_8cpp.html  curves_8cpp.js  curves_8cpp__incl.map  curves_8cpp__incl.md5  curves_8cpp_a0c802ab9d11b7a2c78ffe876b88c4325_cgraph.map  curves_8cpp_a0c802ab9d11b7a2c78ffe876b88c4325_cgraph.md5  curves_8cpp_a1d35ad36990e6f400886d4e2e2b3751e_icgraph.map  curves_8cpp_a1d35ad36990e6f400886d4e2e2b3751e_icgraph.md5  curves_8cpp_a3a6fe3f7faa5a5194d586dc99d1b4862_icgraph.map  curves_8cpp_a3a6fe3f7faa5a5194d586dc99d1b4862_icgraph.md5  curves_8cpp_a43ee8fc382b0ea43a7da3f871d9c631e_cgraph.map  curves_8cpp_a4c44d8b9c30ca7301f192b133542eacc_cgraph.map  curves_8cpp_a4c44d8b9c30ca7301f192b133542eacc_cgraph.md5  curves_8cpp_ab3cc81b11ccbb5658bf6259105fbba3e_cgraph.md5  curves_8cpp_abe9fa1f2a311f275f92f5b46fb2f8490_cgraph.map  curves_8cpp_abe9fa1f2a311f275f92f5b46fb2f8490_cgraph.md5  curves_8cpp_abe9fa1f2a311f275f92f5b46fb2f8490_icgraph.map  curves_8cpp_abe9fa1f2a311f275f92f5b46fb2f8490_icgraph.md5  curves_8cpp_aca4aaefe66ab2cbc9d44054ab8929c0d_cgraph.map  curves_8cpp_aca4aaefe66ab2cbc9d44054ab8929c0d_cgraph.md5  curves_8cpp_aca4aaefe66ab2cbc9d44054ab8929c0d_icgraph.map  curves_8cpp_aca4aaefe66ab2cbc9d44054ab8929c0d_icgraph.md5  curves_8cpp_acd318fe2ec3011922c3f4d9d7590b168_cgraph.map  curves_8cpp_acd318fe2ec3011922c3f4d9d7590b168_cgraph.md5  curves_8cpp_acd318fe2ec3011922c3f4d9d7590b168_icgraph.map  curves_8cpp_acd318fe2ec3011922c3f4d9d7590b168_icgraph.md5  curves_8cpp_ad80a7305d57dbb5359a411d6e7a9e307_cgraph.map  curves_8cpp_ad80a7305d57dbb5359a411d6e7a9e307_cgraph.md5  curves_8cpp_ad80a7305d57dbb5359a411d6e7a9e307_icgraph.map  curves_8cpp_ad80a7305d57dbb5359a411d6e7a9e307_icgraph.md5  curves_8cpp_ad812fc50a0384335487e258a6f61714e_cgraph.map  curves_8cpp_ad812fc50a0384335487e258a6f61714e_icgraph.map  curves_8cpp_add82340f1f49c827ac105487308d47ac_cgraph.map  curves_8cpp_add82340f1f49c827ac105487308d47ac_cgraph.md5  curves_8cpp_ae1f2aea35fc8ca6d56097bc3b7824c07_cgraph.map  curves_8cpp_ae1f2aea35fc8ca6d56097bc3b7824c07_cgraph.md5  curves_8cpp_ae1f2aea35fc8ca6d56097bc3b7824c07_icgraph.map  (+380 more)
Projeto/docs/docs/search/: all_1.js  all_3.js  all_9.js
Projeto/docs/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+29 more)
Projeto/reports/: fase4.aux  fase4.fdb_latexmk  fase4.fls  fase4.lof  fase4.out  fase4.tex  fase4.toc
Projeto/src/: curves.cpp  curves.h  engine.cpp  generator.cpp  main.cpp  parsing.cpp  parsing.h  util.cpp  util.h
Projeto/test_files_phase_1/: test.sh  test_1_1.sh  test_1_1.xml  test_1_2.sh  test_1_2.xml  test_1_3.sh  test_1_3.xml  test_1_4.sh  test_1_4.xml  test_1_5.sh  test_1_5.xml
Projeto/test_files_phase_2/: solar_system.zsh  test_2_1.sh  test_2_1.xml  test_2_2.sh  test_2_2.xml  test_2_3.sh  test_2_3.xml  test_2_4.sh  test_2_4.xml
Projeto/test_files_phase_3/: solar_system.template.xml  test_3_1.xml  test_3_2.xml
Projeto/test_files_phase_4/: notes for phase IV.txt  solar_system.xml.template  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml  test_4_7.xml  test_4_solar_system.zsh
TP/Preparation for practical classes/code/: main.cpp
TP/TP1/code/: main.cpp
TP/TP10/code/: main.cpp
TP/TP11/code/: main.cpp
TP/TP2/code/: main.cpp
TP/TP3/code/: main.cpp
TP/TP4/code/: main.cpp
TP/TP5/code5/: main.cpp
TP/TP6/code6/: CMakeLists.txt  main.cpp
TP/TP7/code7/: CMakeLists.txt  main.cpp
TP/TP8/code/: catmull-rom.cpp
TP/TP9/code/: main.cpp
